--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Parabolas in Real Life - 3D Showcase</title>
+  <style>
+    body { margin: 0; overflow: hidden; font-family: sans-serif; }
+    #buttons { position: absolute; top: 10px; left: 10px; z-index: 1; }
+    button { margin: 5px; padding: 10px; font-size: 16px; }
+  </style>
+</head>
+<body>
+  <div id="buttons">
+    <button onclick="showModel('parabola')">Parabola Curve</button>
+    <button onclick="showModel('satellite')">Satellite Dish</button>
+    <button onclick="showModel('fountain')">Fountain Arc</button>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
+
+  <script>
+    let scene, camera, renderer, controls;
+    let currentObject = null;
+
+    init();
+
+    function init() {
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 10, 30);
+
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      controls = new THREE.OrbitControls(camera, renderer.domElement);
+      controls.enableDamping = true;
+
+      const light = new THREE.DirectionalLight(0xffffff, 1);
+      light.position.set(10, 20, 10);
+      scene.add(light);
+
+      animate();
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
+    }
+
+    function showModel(model) {
+      if (currentObject) {
+        scene.remove(currentObject);
+        currentObject.geometry.dispose();
+        currentObject.material.dispose();
+        currentObject = null;
+      }
+
+      if (model === 'parabola') {
+        const material = new THREE.LineBasicMaterial({ color: 0x00ff00 });
+        const points = [];
+        for (let x = -10; x <= 10; x += 0.1) {
+          let y = 0.3 * x * x;
+          points.push(new THREE.Vector3(x, y, 0));
+        }
+        const geometry = new THREE.BufferGeometry().setFromPoints(points);
+        const parabolaLine = new THREE.Line(geometry, material);
+        currentObject = parabolaLine;
+        scene.add(parabolaLine);
+      }
+
+      if (model === 'satellite') {
+        const geometry = new THREE.ParaboloidGeometry(5, 5, 30, 30);
+        const material = new THREE.MeshStandardMaterial({ color: 0x4287f5, wireframe: true });
+        const dish = new THREE.Mesh(geometry, material);
+        currentObject = dish;
+        scene.add(dish);
+      }
+
+      if (model === 'fountain') {
+        const material = new THREE.LineBasicMaterial({ color: 0x00ffff });
+        const points = [];
+        for (let t = 0; t <= Math.PI; t += 0.05) {
+          let x = 10 * Math.cos(t);
+          let y = 10 * Math.sin(t);
+          points.push(new THREE.Vector3(x, y, 0));
+        }
+        const geometry = new THREE.BufferGeometry().setFromPoints(points);
+        const arcLine = new THREE.Line(geometry, material);
+        currentObject = arcLine;
+        scene.add(arcLine);
+      }
+    }
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
+</body>
+</html>
