--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div id="buttons">
-<button onclick="showModel('satellite')">Satellite Dish</button>
-<button onclick="showModel('fountain')">Fountain</button>
-<button onclick="showModel('bridge')">Bridge Arch</button>
+  <button onclick="showModel('satellite')">Satellite Dish</button>
+  <button onclick="showModel('fountain')">Fountain</button>
+  <button onclick="showModel('bridge')">Bridge Arch</button>
 </div>
 <div id="modelContainer">
-<iframe id="sketchfabViewer" src="" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+  <iframe id="sketchfabViewer" width="100%" height="600" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
 <script src="script.js"></script>
 </body>
