--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <div id="buttons">
   <button onclick="showModel('satellite')">Satellite Dish</button>
-  <button onclick="showModel('bridge')">Golden Gate  Bridge</button>
+  <button onclick="showModel('bridge')">Golden Gate Bridge</button>
   <button onclick="showModel('coaster')">Roller Coaster</button>
+  <button onclick="showModel('gateway')">St. Louis Gateway Arch</button>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
 <script src="script.js"></script>
 </body>
-</html>
