--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Parabolas in Real Life - 3D Showcase</title>
+<title>wow</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,10 @@
   <button onclick="showModel('coaster')">Roller Coaster</button>
 </div>
 
-<div id="footer"></div>
+<div id="footer">
+  <span id="footerText"></span>
+  <button id="refreshFooter">↻</button>
+</div>
 
 <script>
   const footerTexts = [
@@ -22,24 +25,36 @@
     "kahit sa'n man mapunta ay anino mo'y kumakapit sa 'king kamay",
     "tumingin ka sa 'king mga mata at hindi mo na kailangan pang magtanong nang paulit-ulit, ikaw lang ang iniibig",
     "ibuhos na ang beer sa aking lalamunan upang malunod na ang puso kong nahihirapan",
-    "at natapos ang himas ng sandal 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
+    "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
+    "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulanUmaasa, umaasa",
+    "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
   ];
 
-  const footer = document.getElementById('footer');
-  const text = footerTexts[Math.floor(Math.random() * footerTexts.length)];
+  const footerText = document.getElementById('footerText');
+  const refreshButton = document.getElementById('refreshFooter');
 
-  let i = 0;
-  function typeWriter() {
-    if (i < text.length) {
-      footer.textContent += text.charAt(i);
-      i++;
-      setTimeout(typeWriter, 1);
+  function typeWriter(text, i = 0) {
+    footerText.textContent = "";  
+    function type() {
+      if (i < text.length) {
+        footerText.textContent += text.charAt(i);
+        i++;
+        setTimeout(type, 0);
+      }
     }
+    type();
   }
 
-  typeWriter();
-</script>
+  function setRandomFooter() {
+    const text = footerTexts[Math.floor(Math.random() * footerTexts.length)];
+    typeWriter(text);
+  }
 
+  refreshButton.addEventListener('click', setRandomFooter);
+
+
+  setRandomFooter();
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
