--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <button id="refreshFooter">↻</button>
 </div>
 
+<img src="agasino.jpg" id="middle-image" alt="">
+
 <script>
   const footerTexts = [
     "hanggang kailan ako maghihintay na makasama kang muli",
@@ -26,7 +28,7 @@
     "tumingin ka sa 'king mga mata at hindi mo na kailangan pang magtanong nang paulit-ulit, ikaw lang ang iniibig",
     "ibuhos na ang beer sa aking lalamunan upang malunod na ang puso kong nahihirapan",
     "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
-    "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulanUmaasa, umaasa",
+    "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulan umaasa, umaasa",
     "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
   ];
 
