--- a/index.html
+++ b/index.html
@@ -1,65 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>wow</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>wow</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div id="buttons">
-  <button onclick="showModel('satellite')">Satellite Dish</button>
-  <button onclick="showModel('bridge')">Golden Gate Bridge</button>
-  <button onclick="showModel('coaster')">Roller Coaster</button>
-</div>
 
-<div id="footer">
-  <span id="footerText"></span>
-  <button id="refreshFooter">↻</button>
-</div>
+  <!-- AUDIO -->
+  <audio id="click-sound" src="button.ogg" preload="auto"></audio>
+  <audio id="hover-sound" src="cancel.ogg" preload="auto"></audio>
 
-<img src="agasino.jpg" id="middle-image" alt="">
+  <!-- BUTTONS -->
+  <div id="buttons">
+    <button onclick="showModel('satellite')">Satellite Dish</button>
+    <button onclick="showModel('bridge')">Golden Gate Bridge</button>
+    <button onclick="showModel('coaster')">Roller Coaster</button>
+  </div>
 
-<script>
-  const footerTexts = [
-    "hanggang kailan ako maghihintay na makasama kang muli",
-    "halika na, sumama ka, pagmasdan ang mga tala",
-    "kahit sa'n man mapunta ay anino mo'y kumakapit sa 'king kamay",
-    "tumingin ka sa 'king mga mata at hindi mo na kailangan pang magtanong nang paulit-ulit, ikaw lang ang iniibig",
-    "ibuhos na ang beer sa aking lalamunan upang malunod na ang puso kong nahihirapan",
-    "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
-    "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulan umaasa, umaasa",
-    "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
-  ];
+  <!-- FOOTER -->
+  <div id="footer">
+    <span id="footerText"></span>
+    <button id="refreshFooter">↻</button>
+  </div>
 
-  const footerText = document.getElementById('footerText');
-  const refreshButton = document.getElementById('refreshFooter');
+  <!-- BACKGROUND IMAGE -->
+  <img src="agasino.jpg" id="middle-image" alt="background image">
 
-  function typeWriter(text, i = 0) {
-    footerText.textContent = "";  
-    function type() {
-      if (i < text.length) {
-        footerText.textContent += text.charAt(i);
-        i++;
-        setTimeout(type, 0);
+  <!-- MAIN LOGIC -->
+  <script>
+    const footerTexts = [
+      "hanggang kailan ako maghihintay na makasama kang muli",
+      "halika na, sumama ka, pagmasdan ang mga tala",
+      "kahit sa'n man mapunta ay anino mo'y kumakapit sa 'king kamay",
+      "tumingin ka sa 'king mga mata at hindi mo na kailangan pang magtanong nang paulit-ulit, ikaw lang ang iniibig",
+      "ibuhos na ang beer sa aking lalamunan upang malunod na ang puso kong nahihirapan",
+      "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
+      "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulan umaasa, umaasa",
+      "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
+    ];
+
+    const footerText = document.getElementById('footerText');
+    const refreshButton = document.getElementById('refreshFooter');
+
+    function typeWriter(text, i = 0) {
+      footerText.textContent = "";
+      function type() {
+        if (i < text.length) {
+          footerText.textContent += text.charAt(i);
+          i++;
+          setTimeout(type, 30);
+        }
       }
+      type();
     }
-    type();
-  }
 
-  function setRandomFooter() {
-    const text = footerTexts[Math.floor(Math.random() * footerTexts.length)];
-    typeWriter(text);
-  }
+    function setRandomFooter() {
+      const text = footerTexts[Math.floor(Math.random() * footerTexts.length)];
+      typeWriter(text);
+    }
 
-  refreshButton.addEventListener('click', setRandomFooter);
+    refreshButton.addEventListener('click', setRandomFooter);
+    setRandomFooter();
 
+    const clickSound = document.getElementById('click-sound');
+    const hoverSound = document.getElementById('hover-sound');
 
-  setRandomFooter();
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
-<script src="script.js"></script>
+    document.querySelectorAll('#buttons button').forEach(button => {
+      button.addEventListener('mouseenter', () => {
+        const sound = hoverSound.cloneNode(true);
+        sound.playbackRate = 0.98 + Math.random() * 0.04;
+        sound.play();
+        button.classList.add('hover-grow');
+      });
+
+      button.addEventListener('mouseleave', () => {
+        button.classList.remove('hover-grow');
+      });
+
+      button.addEventListener('click', () => {
+        const sound = clickSound.cloneNode(true);
+        sound.playbackRate = 0.95 + Math.random() * 0.1;
+        sound.play();
+
+        button.classList.remove('balatro-tilt-shake-click');
+        void button.offsetWidth; // force reflow to restart animation
+        button.classList.add('balatro-tilt-shake-click');
+      });
+    });
+
+    // Placeholder for Three.js logic
+    function showModel(name) {
+      console.log("Show model:", name);
+      // Fill with your Three.js loader logic
+    }
+  </script>
+
+  <!-- THREE.JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
