--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
 </head>
 <body>
 
+  <!-- Sounds -->
   <audio id="click-sound" src="button.ogg" preload="auto"></audio>
   <audio id="hover-sound" src="cancel.ogg" preload="auto"></audio>
 
-
+  <!-- Buttons -->
   <div id="buttons">
-    <button onclick="showModel('satellite')">Satellite Dish</button>
-    <button onclick="showModel('bridge')">Golden Gate Bridge</button>
-    <button onclick="showModel('coaster')">Roller Coaster</button>
+    <button data-model="satellite">Satellite Dish</button>
+    <button data-model="bridge">Golden Gate Bridge</button>
+    <button data-model="coaster">Roller Coaster</button>
   </div>
 
-
+  <!-- Footer -->
   <div id="footer">
     <span id="footerText"></span>
     <button id="refreshFooter">↻</button>
   </div>
 
+  <!-- Center Image -->
   <img src="agasino.jpg" id="middle-image" alt="background image">
 
+  <!-- Scripts -->
   <script>
     const footerTexts = [
       "hanggang kailan ako maghihintay na makasama kang muli",
@@ -65,33 +68,39 @@
     const hoverSound = document.getElementById('hover-sound');
 
     document.querySelectorAll('#buttons button').forEach(button => {
+      const handlePress = () => {
+        const sound = clickSound.cloneNode(true);
+        sound.playbackRate = 0.95 + Math.random() * 0.1;
+        sound.play();
+
+        button.classList.remove('balatro-tilt-shake-click');
+        void button.offsetWidth; // force reflow
+        button.classList.add('balatro-tilt-shake-click');
+
+        // Placeholder for model loading
+        const modelName = button.getAttribute('data-model');
+        showModel(modelName);
+      };
+
+      // Mobile + Desktop tap
+      button.addEventListener('touchstart', e => {
+        e.preventDefault(); // prevent blue highlight
+        handlePress();
+      });
+
+      button.addEventListener('click', handlePress);
+
+      // Hover grow sound + grow on desktop only
       button.addEventListener('mouseenter', () => {
         const sound = hoverSound.cloneNode(true);
         sound.playbackRate = 0.98 + Math.random() * 0.04;
         sound.play();
         button.classList.add('hover-grow');
       });
-
       button.addEventListener('mouseleave', () => {
         button.classList.remove('hover-grow');
       });
-
-      button.addEventListener('click', () => {
-        const sound = clickSound.cloneNode(true);
-        sound.playbackRate = 0.95 + Math.random() * 0.1;
-        sound.play();
-
-        button.classList.remove('balatro-tilt-shake-click');
-        void button.offsetWidth; 
-        button.classList.add('balatro-tilt-shake-click');
-      });
     });
-
-  
-    function showModel(name) {
-      console.log("Show model:", name);
-    
-    }
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
