--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <!-- Center Image -->
-  <img src="agasino.jpg" id="middle-image" alt="background image">
+  <img src="agasino.png" id="middle-image" alt="background image">
 
   <!-- Scripts -->
   <script>
