--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
       "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
       "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulan umaasa, umaasa",
       "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
+      "no i dont have a gun",
+      "youve been locked in here forever, and you just cant say goodbye",
+      "i swear ill only make you cry",
+      "and when you go away, i still see you with sunlight on your face in my rearview",
+      "knowing that i love you, and running my fingers through your hair",
+      "are you sick of me? would you like to be? im t rying to you something something that i already said",
+      "because love can burn like a cigarette",
+      "and she cried over nothing so there was nothing i could stop her from cutting her beautiful blue hair off",
+      "winner takes it all",
+      "the loser standing small",
+      "slipping through my fingers all the time",
+      "you were always sure of yourself now I see you've broken a feather i hope we can patch it up together",
     ];
 
     const footerText = document.getElementById('footerText');
