--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>wow</title>
+  <title>sure</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="agasino.png" type="image/png">
 </head>
 <body>
 
