--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       "ibuhos na ang beer sa aking lalamunan upang malunod na ang puso kong nahihirapan",
       "at natapos ang himas ng sandali 'di kukubli aking tinig nang lumipas na't 'di man lang nasabi salamat hanggang sa muli",
       "magbabalik ang nakaraan ibabalik ang pinagmulan umaasa, umaasa magbabalik ang nakaraan Ibabalik ang pinagmulan umaasa, umaasa",
-      "hm, 'di ba? nakaka####### ### tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
+      "hm, 'di ba? nakaka########## tayo'y lumilipad, at ako'y iniwan mo oh, 'di ba? pinagmukha mo 'kong #####",
       "no i dont have a gun",
       "youve been locked in here forever, and you just cant say goodbye",
       "i swear ill only make you cry",
@@ -52,6 +52,14 @@
       "the loser standing small",
       "slipping through my fingers all the time",
       "you were always sure of yourself now I see you've broken a feather i hope we can patch it up together",
+      "i don't think that you even realize the joy you make me feel when i'm inside your universe",
+      "tulad ng mundong hindi tumitigil sa pag-ikot pag-ibig 'di mapapagod tulad ng ilog na hindi tumitigil sa pag-agos pag-ibig 'di matatapos",
+      "halika na at sumiping ka sa kama lasapin natin sarap ng pagsasama",
+      "pero 'wag mag-alala 'di na kita gagambalain pa alam ko namang ngayon may kapiling ka nang iba",
+      "susunugin ko alaala mo hanggang sa malimot ka ang lahat-lahat sa 'yo ako na'ng lalayo",
+      "tayo na lang dalawa tayo na lang magsama tayo na lang dalawa tayo naman talaga tayo na lang dalawa tayo na lang magsama tayo na lang dalawa tayo naman talaga",
+      "sana, sana naman ay mapa-mapagbigyan na at nang mapakinggan ang tibok ng puso kong sa 'yo lang",
+      "baby, I am a wreck when I'm without you i need you here to stay i broke all my bones that day I found you crying at the lake",
     ];
 
     const footerText = document.getElementById('footerText');
@@ -63,7 +71,7 @@
         if (i < text.length) {
           footerText.textContent += text.charAt(i);
           i++;
-          setTimeout(type, 30);
+          setTimeout(type, 0);
         }
       }
       type();
