--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
       "loading...",
       "naglolog ka ata",
       "the man who sold the world",
+      "leader walang ambag",
+      "leader walang ambag",
       
     ];
 
