--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       "never cook again",
       "HAHAHAHAHAH",
       "listen look and listen and learn",
-      "yung mga kaibigan mo",
+      "hoy, yung mga barkada mo",
       "but it refused",
       "sige lang",
       "swaggalicious",
@@ -250,6 +250,7 @@
       "the man who sold the world",
       "leader walang ambag",
       "leader walang ambag",
+      "walang ambag si kurt kian zamora",
       
     ];
 
