--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="agasino.png" type="image/png">
 
   <style>
-    /* Loading screen overlay */
+
     #loading-screen {
       position: fixed;
       top: 0;
@@ -57,7 +57,7 @@
 </head>
 <body>
 
-  <!-- Loading Screen -->
+
   <div id="loading-screen">
     <img src="agasino.png" class="loading-spinner" alt="Loading..." />
     <p id="loading-text"></p>
@@ -217,17 +217,13 @@
       }
     }
 
-    // Loading messages
+
     const loadingMessages = [
       "kurt kian zamora walang ambag",
-      "i shall return",
       "well well well",
       "blessing in the sky",
-      "may kwento akiskis",
       "if it works, dont touch it",
       "kurt kian zamora walang ambag",
-      "one more game!!",
-      "galing",
       "ok na 'to",
       "skibidi",
       "kurt kian zamora walang ambag",
@@ -241,16 +237,12 @@
       "time is money so buy a rolex",
       "loading...",
       "naglolog ka ata",
-      "loading...",
-      "naglolog ka ata",
-      "loading...",
-      "naglolog ka ata",
-      "loading...",
       "naglolog ka ata",
       "the man who sold the world",
       "leader walang ambag",
       "leader walang ambag",
       "walang ambag si kurt kian zamora",
+      "kept you waiting, huh?",
       
     ];
 
@@ -278,7 +270,7 @@
     });
   </script>
 
-  <!-- 3D + extras -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
