--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       font-family: "balato", sans-serif;
       font-size: 35px;
       transition: opacity 2s ease;
+      text-align: center;
     }
     /* Spinning image logo */
     .loading-spinner {
