--- a/index.html
+++ b/index.html
@@ -223,28 +223,20 @@
       "kurt kian zamora walang ambag",
       "well well well",
       "blessing in the sky",
-      "if it works, dont touch it",
       "kurt kian zamora walang ambag",
       "ok na 'to",
-      "skibidi",
       "kurt kian zamora walang ambag",
       "never cook again",
-      "HAHAHAHAHAH",
       "listen look and listen and learn",
-      "hoy, yung mga barkada mo",
       "but it refused",
-      "sige lang",
-      "swaggalicious",
       "time is money so buy a rolex",
-      "loading...",
+      "loaded!",
       "naglolog ka ata",
       "naglolog ka ata",
-      "the man who sold the world",
       "leader walang ambag",
       "leader walang ambag",
       "walang ambag si kurt kian zamora",
       "kept you waiting, huh?",
-      
     ];
 
     function cycleLoadingTexts() {
