--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
   <div id="loading-screen">
-    <img src="agasino.png" class="loading-spinner" alt="Loading..." />
+    <img src="agasino.png" class="loading-spinner" alt=" " />
     <p id="loading-text"></p>
   </div>
 
